Updating to be W01 completed assignment

--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>hello world.</h1>
-</body>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Timothy Johnson's Assignment Portal</title>
+    <meta
+      name="description"
+      content="The main page of Timothy Johnson's Assignment Portal. A place where you can check his work from WDD 230 - Web Frontend Development at BYUI - Idaho"
+    />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Timothy Johnson</h1>
+      <img src="images/profile.jpg" alt="Professional picture of Timothy smiling in a formal red shirt by a blue wall." />
+    </header>
+    <main>
+      <h2>CIT 230: Assignment Portal</h2>
+      <hr />
+      <article>
+        <ul>
+          <li>Lesson 02: <a href="#">Assignment link</a></li>
+          <li>Lesson 03: <a href="#">Assignment link</a></li>
+          <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
+        </ul>
+      </article>
+    </main>
+    <footer>
+      <div>
+        &copy; <span id="year"></span> | Timothy Johnson | Lehi, Utah |
+        <a href="https://www.byui.edu/online">BYU-I Online Learning</a>
+      </div>
+      <div>LAST UPDATED: <span id="time"></span></div>
+    </footer>
+  </body>
+  <script src="javascript/index.js"></script>
 </html>
