updating Lesson 02 link to work

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <hr />
       <div>
         <ul>
-          <li>Lesson 02: <a href="#">Assignment link</a></li>
+          <li>Lesson 02: <a href="Lesson2/index.html">Design Principle Document</a></li>
           <li>Lesson 03: <a href="#">Assignment link</a></li>
           <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
         </ul>
