modifying the image to have the same ratio as other images.

--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -28,7 +28,7 @@
       <section>
         <h2>PARC: Contrast</h2>
         <p>Halo Waypoint</p>
-        <a target="_blank" href="https://www.halowaypoint.com/en-us"
+        <a target="_blank" rel="noopener" href="https://www.halowaypoint.com/en-us"
           >www.halowaypoint.com</a
         >
         <img src="images/halowaypoint.png" alt="A snapshot of mobile screen of halowapoint.com to point out contrast design principle. It contains halo 3 ODST game cover with three buttons that either takes you to buy it, to learn more about it, or to watch a trailer. Below it contains an article about MCC development update with its picture of Noble 6 and Dare doing a final firefight on Coastal Highway. In between Halo 3 ODST and an article has social icons that allows you to share at external social websites." />
@@ -45,7 +45,7 @@
       <section>
         <h2>Hick's Law</h2>
         <p>Pokemon</p>
-        <a target="_blank" href="https://www.pokemon.com/us/"
+        <a target="_blank" rel="noopener" href="https://www.pokemon.com/us/"
           >pokemon.com</a
         >
         <img src="images/pokemon.png" alt="A snapshot of mobile screen of halowapoint.com to point out Hick's Law design principle. It contains four menu buttons of which each takes you to different website or to different list of actions. It also contains a hamburger button, which when clicked on, has 7 buttons. The first one takes you to homepage, second one takes you to Pokédex, third one takes you to Video Games & Apps, forth one takes you to Trading Card Game, fifth one takes you to Pokémon TV, sixth one takes you to Play! Pokémon Events, and finally the seventh one takes you to News. Both Trading Card Game and Play! pokémon Events has some other buttons when clicked upon. The first one has two buttons of which each are Pokémon TCG Online and TCG Online Leaderboards. The second one contains two buttons which are Play! Pokémon Events and Play! Pokémon Leaderboards. The Play! Pokémon Events had a lot of other category of buttons that leads to different specific website. The main page contains two articles. The first article picture is larger than usual and contains a Pokémon called Drednaw with epic background. Below the image contains a text that talks about Champion's path expansion. The second article picture contains two Pokémon and a Pokémon Players Cup II logo in-between. The Pokémon on the left is Urshifu and the Pokémon on the right is Coalossal. This article is about a Qualifier Online Copetition."/>
@@ -64,7 +64,7 @@
       <section>
         <h2>Visual Hierarchy</h2>
         <p>YouTube</p>
-        <a target="_blank" href="https://www.youtube.com/"
+        <a target="_blank" rel="noopener" href="https://www.youtube.com/"
           >youtube.com</a
         >
         <img src="images/youtube.png" alt="A snapshot of mobile screen of youtube.com to point out Visual Hierarchy design principle. It shows a YouTube feed list of two videos. Each video has a large Image then below each image on the left contains a channel picture then to the middle contains a video description then to the right is a hamburger button. Then beneath them has a channel name then total views then how old is the video. The first video has a picture of Master Chief in his halo 3 mark v armor with a pistol and facing in one direction. He is in some sort of a wildfire background. It also contains a description text in the middle of the image. It is also in the video description. It reads, '108 Kill Annilation w/ Killtastropie & Inconceivable' and is all caps in the image. The channel logo contains a headhunter skull with blue king crown. Channel name is Mint Blitz, it has 4,400 views, and was released two years ago. The second image is about Squidward pointing to himself in front of Planton pretending to be Mr. Krabs at Mr. Krabs' office. Squidward is mad about something. The channel image is YouTube typical image. The description reads, 'If you think I'm gonna stand out there all day listening to'. Channel name is ImmaSpongeBob, view count is 484,000 views and it was released eight years ago. Then below it contains YouTube typical action buttons such as Home, Trending, Subscriptions and Library buttons. Each with their respective icon."/>
