updating to increase loading times

--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/small.css" />
-    <link rel="stylesheet" href="css/medium.css" />
-    <link rel="stylesheet" href="css/large.css" />
+    <link rel="stylesheet" media="only screen and (min-width: 28.8em)" href="css/medium.css" />
+    <link rel="stylesheet" media="only screen and (min-width: 45em)" href="css/large.css" />
+
+    <script defer src="javascript/index.js"></script>
 
   </head>
   <body>
@@ -89,6 +91,5 @@
       </div>
       <div>LAST UPDATED: <span id="time"></span></div>
     </footer>
-  <script src="javascript/index.js"></script>
   </body>
 </html>
