--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Work+Sans:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" media="only screen and (min-width: 28.8em)" href="css/medium.css" />
