--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/small.css" />
-    <link rel="stylesheet" media="only screen and (min-width: 28.8em)" href="css/medium.css" />
-    <link rel="stylesheet" media="only screen and (min-width: 45em)" href="css/large.css" />
+    <link rel="stylesheet" href="css/medium.css" />
+    <link rel="stylesheet" href="css/large.css" />
 
     <script defer src="javascript/index.js"></script>
 
