changing main index to validate html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
+
+    <script defer src="javascript/index.js"></script>
+
   </head>
   <body>
     <header>
@@ -40,5 +43,4 @@
       <div>LAST UPDATED: <span id="time"></span></div>
     </footer>
   </body>
-  <script src="javascript/index.js"></script>
 </html>
