--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div>
         <ul>
           <li>Lesson 02: <a href="Lesson2/index.html">Design Principle Document</a></li>
-          <li>Lesson 03: <a href="#">Assignment link</a></li>
+          <li>Lesson 03: <a href="Lesson3/index.html">Weather Project</a></li>
           <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
         </ul>
       </div>
