Fixing the domain link to be correct

--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -24,7 +24,7 @@
     <a href="typography.html">Typography</a>
   </nav>
   <h1>Techy Progression's Weather Page</h1>
-  <h2>techyprogress.com (registered by me before this class)</h2>
+  <h2>techyprogression.com (registered by me before this class)</h2>
   <h3>Site purpose</h3>
   <p>The purpose of this page is to provide the cost weight depending on the weather. The worser the weather, the cheaper we provide for services. Who doesn't love cheaper prices?</p>
   <img src="images/weather_logo.png" alt="Weather logo">
