misc. updating to comform the requirements

--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -6,11 +6,12 @@
     <title>Techy Progression's Weather Page</title>
     <meta
       name="description"
-      content="A page about 3 design principles which are contrast, Hick's Law, and Visual Hierarchy. It contains images and description that explain how well the website follow one of these principles. - WDD 230 - Web Frontend Development at BYUI - Idaho"
+      content="A home page of a first project of weather website. It contains color scheme, target audience, typography, and a home page. - WDD 230 - Web Frontend Development at BYUI - Idaho"
     />
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&amp;family=Work+Sans:wght@500&amp;display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
