changing the width to make view larger on smaller view

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <hr />
       <div>
         <ul>
-          <li>Lesson 02: <a href="lesson2/index.html">Design Principle Document</a></li>
+          <li>Lesson 02: <a href="esson2/index.html">Design Principle Document</a></li>
           <li>Lesson 03: <a href="lesson3/index.html">Weather Project</a></li>
           <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
         </ul>
