fixing a minor error

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
           <li>Lesson 02: <a href="lesson2/index.html">Design Principle Document</a></li>
           <li>Lesson 03: <a href="lesson3/index.html">Weather Project</a></li>
-          <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Home page</a></a></li>
+          <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Home page</a></li>
         </ul>
       </div>
     </main>
