removing pointless ending slash

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       content="The main page of Timothy Johnson's Assignment Portal. A place where you can check his work from WDD 230 - Web Frontend Development at BYUI - Idaho"
     />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Work+Sans:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/small.css" />
-    <link rel="stylesheet" href="css/medium.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
 
     <script defer src="javascript/index.js"></script>
 
