--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -8,16 +8,17 @@
       name="description"
       content="A home page of a first project of weather website. It contains color scheme, target audience, typography, and a home page. - WDD 230 - Web Frontend Development at BYUI - Idaho"
     />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-
+    <!-- replaced with javascript/fonts.js and webfont.js
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&amp;family=Work+Sans:wght@500&amp;display=swap" rel="stylesheet">
+    -->
 
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
     <link rel="stylesheet" href="css/footer.css">
-    
+
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script defer src="javascript/menu_responsive.js"></script>
     <script defer src="javascript/footer_time.js"></script>
 
@@ -34,39 +35,18 @@
     </div>
     <nav class='clearfix'>
       <ul id='navigation' class='hide responsive'>
-        <li><a href="index.html">Weather Home Page</a></li>
-        <li class='active'><a href="preston-4.html">Preston</a></li>
+        <li class='active'><a href="index.html">Weather Home Page</a></li>
+        <li><a href="preston-4.html">Preston</a></li>
         <li><a href="color-scheme.html">Color Scheme</a></li>
         <li><a href="target-audience.html">Target Audience</a></li>
         <li><a href="typography.html">Typography</a></li>
       </ul>
     </nav>
   </header>
-  <main>
-    <h2>Preston Idaho</h2>
-    <div class='hero-placeholder'>
-      <img src="images/weather.png" alt="Cloudy sky with sun beams striking.">
-      <h3>Weather Summary</h3>
-      <div class='weather-summary'>
-        <span class='left-cell'>Currently:</span><span class='right-cell'>Sunny</span>
-        <span class='left-cell'>Temperature:</span><span class='right-cell'>76 ℉</span>
-        <span class='left-cell'>Humidity:</span><span class='right-cell'>69%</span>
-        <span class='left-cell'>Percipitation:</span><span class='right-cell'>0 inches</span>
-        <span class='left-cell'>Wind Speed:</span><span class='right-cell'>5 mph</span>
-      </div>
-    </div>
-    <ul>
-      <li>Five Day Forecast</li>
-      <li>Article Title</li>
-      <li>Contact Information</li>
-    </ul>
-  </main>
-  <footer>
-    <div>
-      &copy; <span id="year"></span> | Timothy Johnson | Lehi, Utah |
-      <a href="https://www.byui.edu/online">BYU-I Online Learning</a>
-    </div>
-    <div>LAST UPDATED: <span id="time"></span></div>
-  </footer>
+  <h1>Techy Progression's Weather Page</h1>
+  <h2>techyprogression.com (registered by me before this class)</h2>
+  <h3>Site purpose</h3>
+  <p>The purpose of this page is to provide the cost weight depending on the weather. The worser the weather, the cheaper we provide for services. Who doesn't love cheaper prices?</p>
+  <img src="images/weather_logo.png" alt="Weather logo">
 </body>
 </html>
