updating img linking to be lowercase to work

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -36,12 +36,12 @@
     </section>
     <h2>Personas</h2>
     <section>
-      <img src="images/Grandma.jpg" alt="A picture of Grandma in her Sunday best clothes">
+      <img src="images/grandma.jpg" alt="A picture of Grandma in her Sunday best clothes">
       <p>Well known by many people as Grandma Joy. She invented the html language and loves outdoors. She is a retired billionare and is a well educated lady. She is 60 years old and has a large family. She loves to use our website to help her know what the weather is like at certain location with certain services provided.</p>
     </section>
 
     <section>
-      <img src="images/Man.jpg" alt="A picture of a 30-year old man in his professional work clothes">
+      <img src="images/man.jpg" alt="A picture of a 30-year old man in his professional work clothes">
       <p>Linus is well known for creating Linux Operating System we all know and love today. He is 30 years old. His income is above average. He likes using our website whenever he goes camping with his family.</p>
     </section>
     <h2>Scenarios</h2>
