changing to have right menu items

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -33,11 +33,12 @@
     </div>
     <nav class='clearfix'>
       <ul id='navigation' class='hide responsive'>
-        <li><a href="index.html">Weather Home Page</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class='active'><a href="preston-4.html">Preston</a></li>
-        <li><a href="color-scheme.html">Color Scheme</a></li>
-        <li><a href="target-audience.html">Target Audience</a></li>
-        <li><a href="typography.html">Typography</a></li>
+        <li><a href="#">Soda Springs</a></li>
+        <li><a href="#">Fish Haven</a></li>
+        <li><a href="#">Storm Center</a></li>
+        <li><a href="#">Gallery</a></li>
       </ul>
     </nav>
   </header>
