changing to stub out nav and width restriction

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -27,7 +27,7 @@
       <img class='logo' src="images/weather_logo.png">
       <div>
         <h1>The Weather Site</h1>
-        <p>motto</p>
+        <p>We like to talk about weather!</p>
       </div>
       <button onclick="toggleMenu()">&#9776;</button>
     </div>
@@ -43,13 +43,11 @@
     </nav>
   </header>
   <main>
-    <ul>
-      <li>Preston Idaho</li>
-      <li>Weather Summary</li>
-      <li>Five Day Forecast</li>
-      <li>Article Title</li>
-      <li>Contact Information</li>
-    </ul>
+    <div>Preston Idaho</div>
+    <div>Weather Summary</div>
+    <div>Five Day Forecast</div>
+    <div>Article Title</div>
+    <div>Contact Information</div>
   </main>
   <footer>
     <div>
