--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -28,7 +28,7 @@
       <img class='logo' src="images/weather_logo.png">
       <div>
         <h1>The Weather Site</h1>
-        <p>motto</p>
+        <p>We like to talk about weather!</p>
       </div>
       <button onclick="toggleMenu()">&#9776;</button>
     </div>
@@ -56,11 +56,11 @@
         <span class='left-cell'>Wind Speed:</span><span class='right-cell'>5 mph</span>
       </div>
     </div>
-    <ul>
-      <li>Five Day Forecast</li>
-      <li>Article Title</li>
-      <li>Contact Information</li>
-    </ul>
+    <div>Preston Idaho</div>
+    <div>Weather Summary</div>
+    <div>Five Day Forecast</div>
+    <div>Article Title</div>
+    <div>Contact Information</div>
   </main>
   <footer>
     <div>
