--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -28,7 +28,7 @@
       <img class='logo' src="images/weather_logo.png">
       <div>
         <h1>The Weather Site</h1>
-        <p>motto</p>
+        <p>We like to talk about weather!</p>
       </div>
       <button onclick="toggleMenu()">&#9776;</button>
     </div>
