--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           <li>Lesson 02: <a href="lesson2/index.html">Design Principle Document</a></li>
           <li>Lesson 03: <a href="lesson3/index.html">Weather Project</a></li>
           <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Home page</a></li>
+          <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Home page</a></li>
+          <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Home page</a></li>
         </ul>
       </div>
     </main>
