adding alt to logo

--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -28,7 +28,7 @@
   </div>
   <header>
     <div class='header_top'>
-      <img class='logo' src="images/weather_logo.png">
+      <img class='logo' src="images/weather_logo.png" alt="weather logo">
       <div>
         <h1>The Weather Site</h1>
         <p>We like to talk about weather!</p>
