adding link to tablebuild.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Home page</a></li>
           <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Home page</a></li>
           <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive loading</a> <a href="lesson7/gallery-7.html">Gallary</a></li>
+          <li><a href="https://timjo6789.github.io/lesson8/tablebuild.html">table build</a></li>
         </ul>
       </div>
     </main>
