updating lesson4 to comply

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -43,11 +43,18 @@
     </nav>
   </header>
   <main>
-    <div>Preston Idaho</div>
-    <div>Weather Summary</div>
-    <div>Five Day Forecast</div>
-    <div>Article Title</div>
-    <div>Contact Information</div>
+    <div>
+      <h2>Preston Idaho</h2>
+    </div>
+    <div>
+      <p id="five_day_forecast_title">Five Day Forecast</p>
+    </div>
+    <div>
+      <h2>Article</h2>
+    </div>
+    <div class='contact'>
+      <p>The Weather Site</p>
+    </div>
   </main>
   <footer>
     <div>
