updating to improve lighthouse report

--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -82,7 +82,7 @@
       </fieldset>
       <fieldset>
         <legend>Additional Information</legend>
-        <label><textarea name="additional-notes" cols="30" rows="10"></textarea></label>
+        <label>Type in any other information <textarea name="additional-notes" cols="30" rows="10"></textarea></label>
       </fieldset>
       <input type="submit" value="Report My Storm">
     </form>
