--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Home page</a></li>
           <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive loading</a> <a href="lesson7/gallery-7.html">Gallary</a></li>
           <li>Lesson 08: <a href="lesson8/tablebuild.html">table build</a> <a href="lesson8/stormcenter.html">Storm Center</a></li>
+          <li>Lesson 08: <a href="lesson9/prophets.html">Prophet cards</a></li>
         </ul>
       </div>
     </main>
