seeing if lazyloading is possible, it is

--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/normalize.min.css"> 
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/prophet.css">
+    <link rel="stylesheet" href="css/lazyload.css">
 
     <script defer src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script defer src="javascript/load_fonts.js"></script>
