updating placeholders to meet needed requirements.

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -43,18 +43,10 @@
     </nav>
   </header>
   <main>
-    <div>
-      <h2>Preston Idaho</h2>
-    </div>
-    <div>
-      <p id="five_day_forecast_title">Five Day Forecast</p>
-    </div>
-    <div>
-      <h2>Article</h2>
-    </div>
-    <div class='contact'>
-      <p>The Weather Site</p>
-    </div>
+    <div class='contentbox'>Hero w/ weather summary</div>
+    <div class='contentbox forecast'>5 Day Forecast</div>
+    <div class='contentbox'>Article</div>
+    <div class='contentbox'>Contact Information</div>
   </main>
   <footer>
     <div>
