--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive loading</a> <a href="lesson7/gallery-7.html">Gallary</a></li>
           <li>Lesson 08: <a href="lesson8/tablebuild.html">table build</a> <a href="lesson8/stormcenter.html">Storm Center</a></li>
           <li>Lesson 09: <a href="lesson9/prophets.html">Prophet cards</a> <a href="lesson9/wireframe.html">wireframes</a> <a href="lesson9/index.html">Weather Home Page</a></li>
+          <li>Lesson 10: <a href="lesson10/preston-10.html">Preston Page</a></li>
         </ul>
       </div>
     </main>
