--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -26,7 +26,7 @@
 <body>
   <header>
     <div class='header_top'>
-      <img class='logo' src="images/weather_logo.png">
+      <img class='logo' src="images/weather_logo.png" alt="weather logo">
       <div>
         <h1>The Weather Site</h1>
         <p>motto</p>
