--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -35,11 +35,12 @@
     </div>
     <nav class='clearfix'>
       <ul id='navigation' class='hide responsive'>
-        <li class='active'><a href="index.html">Weather Home Page</a></li>
-        <li><a href="preston-4.html">Preston</a></li>
-        <li><a href="color-scheme.html">Color Scheme</a></li>
-        <li><a href="target-audience.html">Target Audience</a></li>
-        <li><a href="typography.html">Typography</a></li>
+        <li class='active'><a href="index.html">Home</a></li>
+        <li><a href="preston.html">Preston</a></li>
+        <li><a href="soda_springs.html">Soda Springs</a></li>
+        <li><a href="fish_haven.html">Fish Haven</a></li>
+        <li><a href="#">Storm Center</a></li>
+        <li><a href="#">Gallery</a></li>
       </ul>
     </nav>
   </header>
