--- a/lesson11/soda_springs.html
+++ b/lesson11/soda_springs.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
     <link rel="stylesheet" href="css/footer.css">
-
+    
     <script>
-      // configure api to use Preston
-      const TOWN_ID = 5604473;
+      // configure api to use Soda Springs
+      const TOWN_ID = 5607916;
     </script>
     <script defer src="javascript/menu_responsive.js"></script>
     <script defer src="javascript/footer_time.js"></script>
@@ -27,7 +27,7 @@
     <script defer src="javascript/load_fonts.js"></script>
     <script defer src="javascript/weather.js"></script>
     <script defer src="javascript/weatherapi.js"></script>
-    <script defer src="javascript/weatherapi_preston.js"></script>
+    <script defer src="javascript/weatherapi_soda_springs.js"></script>
   </head>
 <body>
   <div id='banner' class='hidden'>
@@ -44,8 +44,8 @@
     <nav class='clearfix'>
       <ul id='navigation' class='hide responsive'>
         <li><a href="index.html">Home</a></li>
-        <li class='active'><a href="preston.html">Preston</a></li>
-        <li><a href="soda_springs.html">Soda Springs</a></li>
+        <li><a href="preston.html">Preston</a></li>
+        <li class='active'><a href="soda_springs.html">Soda Springs</a></li>
         <li><a href="fish_haven.html">Fish Haven</a></li>
         <li><a href="#">Storm Center</a></li>
         <li><a href="#">Gallery</a></li>
@@ -53,7 +53,7 @@
     </nav>
   </header>
   <main>
-    <h2>Preston Idaho</h2>
+    <h2>Soda Springs</h2>
     <div class='hero-placeholder'>
       <picture>
         <source media="(min-width: 960px)" srcset="images/weather/1328x645_pixels_at_147KB_240ppi.jpg">
