modifying apis layout

--- a/lesson11/fish_haven.html
+++ b/lesson11/fish_haven.html
@@ -64,11 +64,11 @@
         <h3>Weather Summary</h3>
         <div class='weather-summary'>
           <span class='left-cell'>Currently:</span> <span class='right-cell'>Sunny</span>
-          <span class='left-cell'>Temperature:</span> <span class='right-cell'><span id='temperature'>76</span> ℉</span>
+          <span class='left-cell'>Temperature:</span> <span class='right-cell'><span id='temperature'>N/A</span> ℉</span>
           <span class='left-cell'>Wind Chill:</span> <span class='right-cell'><span id='wind_chill'>N/A</span></span>
-          <span class='left-cell'>Humidity:</span> <span class='right-cell'><span id='humidity'>69</span>%</span>
+          <span class='left-cell'>Humidity:</span> <span class='right-cell'><span id='humidity'>N/A</span>%</span>
           <!-- <span class='left-cell'>Percipitation:</span> <span class='right-cell'>0 inches</span> -->
-          <span class='left-cell'>Wind Speed:</span> <span class='right-cell'><span id='wind_speed'>5</span> mph</span>
+          <span class='left-cell'>Wind Speed:</span> <span class='right-cell'><span id='wind_speed'>N/A</span> mph</span>
         </div>
       </div>
     </div>
@@ -80,11 +80,11 @@
         <span class='weather-top'>Wed</span>
         <span class='weather-top'>Thu</span>
         <span class='weather-top'>Fri</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>89°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>87°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>78°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>75°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>72°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
       </div>
     </div>
     <div>
