--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -64,11 +64,11 @@
         <h3>Weather Summary</h3>
         <div class='weather-summary'>
           <span class='left-cell'>Currently:</span> <span class='right-cell'>Sunny</span>
-          <span class='left-cell'>Temperature:</span> <span class='right-cell'><span id='temperature'>76</span> ℉</span>
+          <span class='left-cell'>Temperature:</span> <span class='right-cell'><span id='temperature'>N/A</span> ℉</span>
           <span class='left-cell'>Wind Chill:</span> <span class='right-cell'><span id='wind_chill'>N/A</span></span>
-          <span class='left-cell'>Humidity:</span> <span class='right-cell'><span id='humidity'>69</span>%</span>
+          <span class='left-cell'>Humidity:</span> <span class='right-cell'><span id='humidity'>N/A</span>%</span>
           <!-- <span class='left-cell'>Percipitation:</span> <span class='right-cell'>0 inches</span> -->
-          <span class='left-cell'>Wind Speed:</span> <span class='right-cell'><span id='wind_speed'>5</span> mph</span>
+          <span class='left-cell'>Wind Speed:</span> <span class='right-cell'><span id='wind_speed'>N/A</span> mph</span>
         </div>
       </div>
     </div>
@@ -80,17 +80,20 @@
         <span class='weather-top'>Wed</span>
         <span class='weather-top'>Thu</span>
         <span class='weather-top'>Fri</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>89°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>87°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>78°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>75°F</span>
-        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>72°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
+        <span class='weather-bottom'><img src='images/sun.png' alt='sun'>N/A°F</span>
       </div>
     </div>
     <div>
       <h2>Smart kid</h2>
       <img id='article-img' src="images/hero.png" alt="Child with hoodie">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rhoncus fermentum arcu quis mollis. Suspendisse vestibulum dui elit, ut commodo ligula scelerisque eu. Nulla facilisi. Proin porttitor quam a orci porttitor fermentum. Vestibulum tempus enim id bibendum molestie. Mauris fermentum, sapien sed molestie aliquet, ex orci varius lectus, vel consequat lorem diam nec lacus. Integer porta bibendum sapien, ac imperdiet tellus consectetur non. Phasellus pharetra dignissim bibendum. Nunc elementum enim nunc, ut bibendum mauris aliquet a. Duis dolor risus, venenatis id urna sit amet, maximus rhoncus mi. Nam metus enim, venenatis non nisi ac, ultrices porta enim. In pulvinar auctor mauris, ac consectetur massa eleifend sed. Morbi vitae turpis urna. Donec pretium dui eget metus porttitor laoreet. Aliquam auctor consequat orci at condimentum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce pharetra luctus sapien nec luctus. Donec lacus mauris, malesuada vitae ex non, tincidunt pharetra felis. Morbi sodales in odio vitae fermentum. Phasellus placerat venenatis urna, a pulvinar libero semper sed. Vivamus vulputate, leo at tempus auctor, mauris dui condimentum turpis, eu mollis turpis dolor sed mauris. Fusce consequat quam at turpis bibendum, hendrerit venenatis justo egestas. Morbi et dictum arcu, eu aliquet urna. Aenean eu sollicitudin quam. Aliquam quis ligula id orci dignissim tempus. Mauris malesuada elit a ullamcorper suscipit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur ornare erat eu tincidunt gravida. Curabitur mauris metus, efficitur rhoncus ex vel, tristique luctus lorem. Sed eu vehicula velit. Vestibulum viverra ligula ante, a porttitor enim vehicula a. Proin convallis, risus vitae efficitur sodales, nibh massa laoreet diam, sit amet vulputate arcu ligula sit amet magna. Nunc non ex ante. Vestibulum sed consequat odio. Integer a nunc nec sem dictum lobortis nec sit amet sapien.</p>
+      <p>He goes to Preston Jr. High. His GPA is perfect 4.0. They held celebration for his preservance and success in completing each class with straight A's. During an interview, he said that his secret to success is to not take summer off and read a lot and a lot of books. He started reading a lot when he was in 4th grade ranging from sci-fi and fantasy to nonfiction novels, science, and history. He even read all kinds of William Shakespeare with ease in 6th grade. He is the sole child of two wonderful parents. Their family made a lot of money when he was in 4th grade. That's when the parents made the decision to require him to read books and lucky for him, he quickly loved to read and he would have discussion with his parents about what he read. </p>
+      <p>In fact, he loved to read so much he decided to write books himself. He made many fan-based books such as "To Kill Mockingbirds", "Invisible Manned Vehicle", "Great Exceptional", "The Great Latsby", and many more. He would spend lunch time drawing of what it would look like in the stories he read.</p>
+      <p>Such a smart kid.</p>
+      <p>Report by George Bob III</p>
     </div>
     <div class='contact'>
       <p>The Weather Site</p>
